--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Images/IMG-20241207-WA0014-modified.png" />
+    <link rel="icon" type="image/svg+xml" href="/Images/IMG-20241207-WA0014-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
   </head>
